fixed untracked files

--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,5 +1,5 @@
-spring.security.oauth2.client.registration.google.client-id=구글클라이언트ID
-spring.security.oauth2.client.registration.google.client-secret=구글클라이언트시크릿
+spring.security.oauth2.client.registration.google.client-id=220562311372-bmhd4cdi1fn2aqecn32sivjp49b9orme.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=D6_doQ87ZIdBb0o0EzOI29Ss
 spring.security.oauth2.client.registration.google.scope=profile,email
 
 # registration
